# vulkan-triangle

./: CMakeLists.txt  CMakePresets.json  HelloTriangleApp.h  HelloTriangleAppDebugFuncs.cpp  HelloTriangleAppMainFuncs.cpp  README.md  VulkanApi  VulkanApiApp.h  VulkanApiAppDebugFuncs.cpp  VulkanApiAppMainFuncs.cpp  constants.h  main.cpp  vulkan.cpp  vulkan.h
shaders/: shader.vert
